--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "1.26.2",
+        "superdesk-core": "petrjasek/superdesk-client-core#a0fdbab4",
         "superdesk-planning": "superdesk/superdesk-planning#1.1"
     },
     "devDependencies": {
