--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
-superdesk-core>=1.25.3
 
+-e git+git://github.com/superdesk/superdesk-core.git@3d47d53#egg=Superdesk-Core
 -e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
