--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "1.28.0",
-        "superdesk-planning": "superdesk/superdesk-planning#700f71b"
+        "superdesk-core": "superdesk/superdesk-client-core#1.28",
+        "superdesk-planning": "petrjasek/superdesk-planning#e42bbfc"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
