--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,5 @@ beautifulsoup4==4.5.3
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
--e git+git://github.com/superdesk/superdesk-core.git@1.28#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-core.git@73af461#egg=superdesk-core
 -e git+git://github.com/petrjasek/superdesk-planning.git@e42bbfc#egg=superdesk-planning
