--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,7 @@ beautifulsoup4==4.5.3
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
+flask==0.12.2
+flask-babel==0.12.2
 -e git+git://github.com/superdesk/superdesk-core.git@1.28#egg=superdesk-core
 -e git+git://github.com/superdesk/superdesk-planning.git@1.5#egg=superdesk-planning
