--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,6 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.28.0"
+        "superdesk-core": "1.29.0-rc.1"
     }
 }
