--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-core": "superdesk/superdesk-client-core#39beede",
-        "superdesk-publisher": "superdesk/superdesk-publisher#master"
+        "superdesk-publisher": "superdesk/superdesk-publisher#1.4"
     }
 }
