--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#master",
+        "superdesk-core": "1.30.0",
         "superdesk-planning": "superdesk/superdesk-planning#1.5"
     },
     "devDependencies": {
