--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-core": "1.30",
-        "superdesk-planning": "superdesk/superdesk-planning#1.6.1",
-        "superdesk-publisher": "superdesk/superdesk-publisher#v1.5.0"
+        "superdesk-planning": "superdesk/superdesk-planning#v1.6.1",
+        "superdesk-publisher": "superdesk/superdesk-publisher#v1.4.1"
     }
 }
