--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ honcho==1.0.1
 newrelic>=2.66,<2.67
 flask==0.12.2
 flask-babel==0.12.2
-superdesk-core>=1.31,<1.32
 pymongo==3.8.0
+
+-e git+git://github.com/petrjasek/superdesk-core.git@feat-incoming-macro-task-param#egg=superdesk-core
 -e git+git://github.com/superdesk/superdesk-planning.git@1.5#egg=superdesk-planning
