--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "~1.31.0",
-        "superdesk-planning": "superdesk/superdesk-planning#1.5"
+        "superdesk-core": "superdesk/superdesk-client-core#develop",
+        "superdesk-planning": "superdesk/superdesk-planning#master"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
