--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,13 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-python3 python3-dev python3-pip python3-venv git gcc mongo-tools mongodb-clients curl \
+python3 python3-dev python3-pip python3-venv git gcc curl \
 # lxml
 libxml2-dev libxslt-dev \
+# xmlsec
+pkg-config libxml2-dev libxmlsec1-dev libxmlsec1-openssl \
 # PIL
 libjpeg-dev zlib1g-dev \
 # magic
@@ -28,7 +30,7 @@ RUN python3 -m pip install -Ur requirements.txt
 ENV PYTHONUNBUFFERED=1
 ENV C_FORCE_ROOT=False
 ENV CELERYBEAT_SCHEDULE_FILENAME=/tmp/celerybeatschedule.db
-ENV TZ=Europe/London
+ENV TZ=Europe/Prague
 
 COPY . .
 
