--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,9 +26,9 @@ blinker==1.7.0
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.34.78
+boto3==1.34.88
     # via superdesk-core
-botocore==1.34.78
+botocore==1.34.88
     # via
     #   boto3
     #   s3transfer
@@ -67,13 +67,13 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.3.0
     # via celery
-croniter==0.3.37
+croniter==2.0.5
     # via superdesk-core
 cryptography==42.0.5
     # via
     #   authlib
     #   jwcrypto
-deepdiff==6.7.1
+deepdiff==7.0.1
     # via superdesk-planning
 draftjs-exporter[lxml]==2.1.7
     # via superdesk-core
@@ -122,7 +122,7 @@ honcho==1.1.0
     # via -r requirements.in
 httplib2==0.22.0
     # via oauth2client
-icalendar==4.0.9
+icalendar==5.0.12
     # via superdesk-planning
 idna==3.7
     # via requests
@@ -154,14 +154,13 @@ lxml==4.6.5
     # via
     #   draftjs-exporter
     #   superdesk-core
+    #   xmlsec
 markupsafe==2.0.1
     # via
     #   jinja2
     #   superdesk-core
 mongolock==1.3.4
     # via superdesk-core
-natsort==8.4.0
-    # via croniter
 oauth2client==4.1.3
     # via flask-oidc-ex
 oauthlib==3.2.2
@@ -213,6 +212,7 @@ python-twitter==3.5
 pytz==2024.1
     # via
     #   celery
+    #   croniter
     #   eve-elastic
     #   flask-babel
     #   icalendar
@@ -260,7 +260,7 @@ typing-extensions==4.11.0
     #   superdesk-core
 tzlocal==2.1
     # via superdesk-core
-unidecode==0.4.21
+unidecode==1.3.8
     # via superdesk-core
 urllib3==1.25.11
     # via
@@ -284,3 +284,5 @@ werkzeug==1.0.1
     #   superdesk-core
 wrapt==1.14.1
     # via elastic-apm
+xmlsec==1.3.13
+    # via superdesk-core
